# app/Http/Controllers/RoleController.php
@@ -9,40 +9,6 @@ use Illuminate\Http\JsonResponse;
 
 class RoleController extends Controller
 {
-    /**
-    * @OA\Get(
-    *     path="/api/roles",
-    *     summary="Retrieve a role by GitHub ID",
-    *     description="Fetches a role using the provided GitHub ID. If the role does not exist, it creates a new role for the user as anonymous.",
-    *     @OA\Response(
-    *         response=200,
-    *         description="Role found",
-    *         @OA\JsonContent(
-    *             type="object",
-    *             @OA\Property(property="message", type="string", example="Role found."),
-    *             @OA\Property(
-    *                 property="role",
-    *                 type="object",
-    *                 ref="#/components/schemas/Role"
-    *             )
-    *         )
-    *     ),
-    *     @OA\Response(
-    *         response=201,
-    *         description="Role not found, created as a new anonymous user",
-    *         @OA\JsonContent(
-    *             type="object",
-    *             @OA\Property(property="message", type="string", example="Role not found. Created as new anonymous user."),
-    *             @OA\Property(
-    *                 property="role",
-    *                 type="object",
-    *                 ref="#/components/schemas/Role"
-    *             )
-    *         )
-    *     )
-    * )
-    */
-
     const ROLE_SUPERADMIN = 'superadmin';
     const ROLE_ADMIN = 'admin';
     const ROLE_MENTOR = 'mentor';
@@ -58,8 +24,41 @@ class RoleController extends Controller
     protected function getRoleLevel(string $role): int
     {
         return $this->roleHierarchy[$role] ?? 0; // it returns 0 if the role is not found
-    }    
+    }
 
+    /**
+     * @OA\Post(
+     *     path="/api/roles",
+     *     summary="Create a new role",
+     *     description="Allows an authorized user to create a new role for a specific GitHub ID.",
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             required={"github_id", "role", "authorized_github_id"},
+     *             @OA\Property(property="github_id", type="integer", example=12345, description="GitHub ID of the user to assign the role"),
+     *             @OA\Property(property="role", type="string", example="mentor", description="Role to be assigned"),
+     *             @OA\Property(property="authorized_github_id", type="integer", example=67890, description="GitHub ID of the user making the request (must have permissions)")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=201,
+     *         description="Role created successfully",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="message", type="string", example="Rol creado con éxito.")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=403,
+     *         description="Unauthorized: Cannot create a role equal or higher than your own",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="message", type="string", example="No puedes crear un rol igual o superior al tuyo.")
+     *         )
+     *     )
+     * )
+     */
+    
     public function createRole(CreateRoleRequest $request): JsonResponse
     {
         $validated = $request->validated();
@@ -87,6 +86,42 @@ class RoleController extends Controller
 
         return response()->json(['message' => 'Rol creado con éxito.'], 201);
     }
+
+    /**
+     * @OA\Get(
+     *     path="/api/users/user-signedin-as",
+     *     summary="Retrieve a role by GitHub ID",
+     *     description="Fetches a role using the provided GitHub ID.",
+     *     @OA\Parameter(
+     *         name="github_id",
+     *         in="query",
+     *         required=true,
+     *         description="GitHub ID of the user",
+     *         @OA\Schema(type="integer", example=12345)
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Role found",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="message", type="string", example="Role found."),
+     *             @OA\Property(
+     *                 property="role",
+     *                 type="object",
+     *                 ref="#/components/schemas/Role"
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Role not found",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="message", type="string", example="Role not found.")
+     *         )
+     *     )
+     * )
+     */
 
     public function getRoleByGithubId(Request $request)
     {
